--- a/index.html
+++ b/index.html
@@ -76,5 +76,27 @@
         </div>
       </div>
     </div>
+
+    <div class="subfooter">
+      <div class="subfooter-container">
+        <a href="#" class="hover-link">Privacy policy</a>
+        <a href="#" class="hover-link">Terms & Condition</a>
+        <a href="#" class="hover-link">Security Information</a>
+        <a href="#" class="hover-link"
+          ><i class="fa-brands fa-square-facebook"></i
+        ></a>
+        <a href="https://www.instagram.com/oye_azmat/" class="hover-link"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="#" class="hover-link" target="_blank"
+          ><i class="fa-brands fa-linkedin-in"></i
+        ></a>
+        <a href="#" class="hover-link" style="font-weight: 100">- © azmat |</a>
+      </div>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/1aeaf9038a.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
