--- a/index.html
+++ b/index.html
@@ -79,9 +79,6 @@
 
     <div class="subfooter">
       <div class="subfooter-container">
-        <a href="#" class="hover-link">Privacy policy</a>
-        <a href="#" class="hover-link">Terms & Condition</a>
-        <a href="#" class="hover-link">Security Information</a>
         <a href="#" class="hover-link"
           ><i class="fa-brands fa-square-facebook"></i
         ></a>
@@ -91,7 +88,7 @@
         <a href="#" class="hover-link" target="_blank"
           ><i class="fa-brands fa-linkedin-in"></i
         ></a>
-        <a href="#" class="hover-link" style="font-weight: 100">- © azmat |</a>
+        <a href="#" class="hover-link"> © azmat </a>
       </div>
     </div>
     <script
